@@ -1,21 +1,13 @@
 package com.promade.process.controller;
 
-import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.CrossOrigin;
-import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.PutMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 import com.promade.process.dto.ProcessoDTO;
 import com.promade.process.model.Processo;
@@ -37,22 +29,14 @@ public class ProcessoController {
     @PostMapping
     public ResponseEntity<ProcessoDTO> salvar(@RequestBody ProcessoDTO processoDTO) {
         if (processoDTO.getNumero() == null || processoDTO.getNumero().isEmpty()) {
-            throw new IllegalArgumentException("Número do processo é obrigatório.");
+            return ResponseEntity.badRequest().build();
         }
 
         Processo processo = new Processo();
         processo.setNumero(processoDTO.getNumero());
 
-        if (processoDTO.getReusIds() != null) {
-            Set<Reu> reus = new HashSet<>();
-            for (Long reuId : processoDTO.getReusIds()) {
-                Reu reu = reuService.buscarPorId(reuId);
-                if (reu != null) {
-                    reus.add(reu);
-                }
-            }
-            processo.setReus(reus);
-        }
+        // Adiciona réus ao processo, se houver
+        processo.setReus(obterReusPorIds(processoDTO.getReusIds()));
 
         Processo processoSalvo = processoService.salvar(processo);
         return ResponseEntity.status(HttpStatus.CREATED).body(convertToDto(processoSalvo));
@@ -60,31 +44,40 @@ public class ProcessoController {
 
     @GetMapping
     public ResponseEntity<List<ProcessoDTO>> listar() {
-        List<Processo> processos = processoService.listar();
-        List<ProcessoDTO> processosDTO = processos.stream()
+        List<ProcessoDTO> processosDTO = processoService.listar().stream()
             .map(this::convertToDto)
-            .toList();
+            .collect(Collectors.toList());
         return ResponseEntity.ok(processosDTO);
     }
-    
+
     @DeleteMapping("/{id}")
-    public ResponseEntity<Void> excluir(@PathVariable long id) {
+    public ResponseEntity<Void> excluir(@PathVariable Long id) {
         processoService.excluir(id);
         return ResponseEntity.noContent().build();
     }
-    
+
     @PutMapping("/{processoId}/reus/{reuId}")
-    public ResponseEntity<Void> adicionarReu(@PathVariable long processoId, @PathVariable long reuId) {
+    public ResponseEntity<Void> adicionarReu(@PathVariable Long processoId, @PathVariable Long reuId) {
         processoService.adicionarReu(processoId, reuId);
         return ResponseEntity.ok().build();
     }
 
-    // Métodos auxiliares para conversão
+    // Método para buscar réus pelo conjunto de IDs
+    private Set<Reu> obterReusPorIds(List<Long> reusIds) {
+        return reusIds == null ? Set.of() : reusIds.stream()
+            .map(reuService::buscarPorId)
+            .filter(reu -> reu != null)
+            .collect(Collectors.toSet());
+    }
+
+    // Método de conversão de Processo para DTO
     private ProcessoDTO convertToDto(Processo processo) {
         ProcessoDTO dto = new ProcessoDTO();
         dto.setId(processo.getId());
         dto.setNumero(processo.getNumero());
-        dto.setReusIds(processo.getReus().stream().map(Reu::getId).toList());
+        dto.setReusIds(processo.getReus().stream()
+            .map(Reu::getId)
+            .collect(Collectors.toList()));
         return dto;
     }
 }
